[package]
name = "relibmss"
version = "0.6.5"
edition = "2021"
license = "MIT"
repository = "https://github.com/okamumu/relibmss"
homepage = "https://github.com/okamumu/relibmss"
documentation = "https://github.com/okamumu/relibmss"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.3", features = ["extension-module"] }
rust-mss = { git = "https://github.com/okamumu/rust-mss.git" }
