[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "relibmss"
version = "0.1.0"
authors = [{ name = "Hiroyuki Okamura", email = "okamu@hiroshima-u.ac.jp" }]
description = "A Python package for binary/multi state systems"
readme = "README.md"
license = { text = "MIT" }

[tool.maturin]
bindings = "pyo3"
